<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cadele</string>
    <string name="action_settings">Settings</string>
    
    <string name="login">Login</string>
    <string name="email">E-mail</string>
	<string name="senha">Senha</string>
	<string name="nome">Nome</string>
	<string name="procurar">Procurar</string>
	<string name="menu">Menu</string>
	
	<string name="entrar">Entrar</string>
	<string name="cadastrar_se">Cadastrar-se</string>
	<string name="adicionar_amigo">Adicionar Amigo</string>
	<string name="localizar_amigo">Localizar Amigo</string>
	<string name="placeholder"> </string>
	
	
</resources>
