<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tv_cadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="22dp"
        android:text="@string/login"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_cadastrar"
        android:layout_below="@+id/tv_cadastrar"
        android:layout_marginTop="16dp"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_email"
        android:layout_below="@+id/tv_email"
        android:ems="10"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tv_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_email"
        android:layout_below="@+id/et_email"
        android:layout_marginTop="10dp"
        android:text="@string/senha"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/et_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_senha"
        android:layout_below="@+id/tv_senha"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/bt_entrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_senha"
        android:layout_centerVertical="true"
        android:text="@string/entrar" />

    <Button
        android:id="@+id/bt_cadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/et_senha"
        android:layout_centerVertical="true"
        android:text="@string/cadastrar_se" />

    <TextView
        android:id="@+id/tv_erroLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bt_entrar"
        android:layout_below="@+id/bt_entrar"
        android:layout_marginTop="31dp"
        android:text="@string/placeholder"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>