<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/bt_adicionar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_menu"
        android:layout_below="@+id/tv_menu"
        android:layout_marginTop="17dp"
        android:text="@string/adicionar_amigo" />

    <Button
        android:id="@+id/bt_localizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bt_adicionar"
        android:layout_below="@+id/bt_adicionar"
        android:layout_marginTop="16dp"
        android:text="@string/localizar_amigo" />

    <TextView
        android:id="@+id/tv_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="52dp"
        android:text="@string/menu"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tv_bemvindo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_menu"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:text="@string/placeholder"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
