<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tv_adicionar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="15dp"
        android:text="@string/adicionar_amigo"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_adicionar"
        android:layout_below="@+id/tv_adicionar"
        android:layout_marginTop="26dp"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/et_emailSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_email"
        android:layout_below="@+id/tv_email"
        android:ems="10"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/bt_procurar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_emailSearch"
        android:layout_below="@+id/et_emailSearch"
        android:layout_marginTop="15dp"
        android:text="@string/procurar" />

    <fragment
        android:id="@+id/fg_adLista"
        android:name="br.com.winget.cadele.fragments.ListProcurarFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="85dp"
        android:layout_below="@+id/bt_procurar" />

    <TextView
        android:id="@+id/tv_adicionado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bt_procurar"
        android:layout_below="@+id/bt_procurar"
        android:layout_marginTop="17dp"
        android:text="@string/placeholder"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
