<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Branco" >

    <EditText
        android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_cadastrar"
        android:layout_below="@+id/tv_email"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/tv_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_cadastrar"
        android:layout_below="@+id/et_email"
        android:text="@string/senha"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/et_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_cadastrar"
        android:layout_below="@+id/tv_senha"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/tv_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_cadastrar"
        android:layout_below="@+id/tv_cadastrar"
        android:layout_marginTop="10dp"
        android:text="@string/nome"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/et_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_nome"
        android:layout_below="@+id/tv_nome"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_nome"
        android:layout_below="@+id/et_nome"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tv_cadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/cadastrar_se"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/bt_cadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_senha"
        android:layout_below="@+id/et_senha"
        android:layout_marginTop="16dp"
        android:text="@string/cadastrar_se" />

    <TextView
        android:id="@+id/tv_cad_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bt_cadastrar"
        android:layout_below="@+id/bt_cadastrar"
        android:layout_marginTop="30dp"
        android:text="@string/placeholder"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>